--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-sohne), Arial, Helvetica, sans-serif;
 }
+
 /* .seamless_imgs{
 
     transform: scale(1.5);
@@ -83,7 +84,8 @@ body {
 @media (min-width: 768px) { /* md breakpoint */
     .logos-slide img {
       height: 50px;
-      margin: 0 40px;
+      margin-right: 80px;
+
     }
 
 }
